[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Instances/Gameplay/WeaponCamera.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Instances/Gameplay/WeaponManager.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Instances/Gameplay/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Instances/UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Instances/Items/Weapons/Unarmed/Unarmed.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Instances/UI/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="CapsuleShape" id=2]
height = 3.0

[sub_resource type="CylinderShape" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )
radius = 0.2
height = 0.4

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
collision_layer = 2
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -0.00267208, 0.00681818, -0.0029006 )
shape = SubResource( 2 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.51673, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Head"]
cull_mask = 1048573

[node name="PickupRay" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )

[node name="ShootRay" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="Hand" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.698216, -0.375644, -1.35626 )
script = ExtResource( 2 )

[node name="Unarmed" parent="Head/Hand" instance=ExtResource( 5 )]

[node name="LeftEye" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1, -1 )
mesh = SubResource( 5 )
material/0 = null

[node name="RightEye" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 1, -1 )
mesh = SubResource( 5 )
material/0 = null

[node name="GroundCheck" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -2.6, 0 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="WeaponCamera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cull_mask = 2
script = ExtResource( 1 )
main_cam_path = NodePath("../../../Head/Camera")

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
